Adicionado login com Google

--- a/src/app/acesso/login/login.component.html
+++ b/src/app/acesso/login/login.component.html
@@ -26,6 +26,7 @@
 
     <p class="small text-danger text-center">O nome de usuário inserido não pertence a uma conta. Verifique seu nome de usuário e tente novamente.</p>
 
+    <button type="button" (click)="signinGoogle()">G+</button>
   </div>
 </div>
 <br />
