--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="logo"></div>
     <div>
       <div class="add-post" data-toggle="modal" data-target="#exampleModal"></div>
-      <a href="#" (click)="sair" style="margin-left: 25px">Sair</a>
+      <a href="#" (click)="sair()" style="margin-left: 25px">Sair</a>
     </div>
   </div>  
 </nav>
